# tonnetz

./: README.md  app.py  pyproject.toml  pytest.ini  setup_dev.py  simulation.midi  test_config.yaml  test_simulation.midi
examples/: advanced_config.yaml  basic_config.yaml  progression_comparison.py  tonnetz_demo.ipynb
tests/: test_basic.py  test_progression_algorithms.py
tonnetz/: __init__.py  __main__.py
tonnetz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tonnetz/audio/: playback.py
tonnetz/automaton/: __init__.py  cell.py  grid.py
tonnetz/cli/: __main__.py  commands.py
tonnetz/core/: __init__.py  chord.py  neo_riemannian.py  tonnetz.py
tonnetz/progression/: __init__.py  base.py  markov.py  rule_based.py  search_based.py
tonnetz/visualization/: interactive.py  static.py
